# hopper-v0

./: .gitignore  .travis.yml  BuildGuide.md  HLint.hs  LICENSE  hazel.cabal  hopper.cabal  lambomba.cabal  readme.md  stack.yaml
app/: Main.hs
hopperi/: Main.hs
models/agda/: ANF.agda  HBound.agda  core.agda
models/agda/Binders/: Var.agda
models/haskell/: AnfIndexed.hs  EvalANF.hs  GTerm.hs  H-I-Core-Value.hs  NormalizeANF.hs  OldANF.hs  STLC.hs  Sized.hs  TermZipper.hs
models/lean/: core.lean
presentations/2016jan-examples/: 2016jan-hopper-examples.tex  hopper-examples-design.tex
presentations/2016jan-examples/slides/: 2016jan-hopper-examples.tex
src/: Hazel.hs
src/Control/Monad/: STE.hs  STExcept.hs
src/Data/: HopperException.hs  Initialism.hs
src/Data/Hop/: Or.hs
src/Data/List/: Sized.hs
src/Hopper/: HBound.hs
src/Hopper/Internal/: Playground.hs  State.hs
src/Hopper/Internal/Core/: Anf.hs  Closed.hs  ClosureConvertedANF.hs  DataTypes.hs  EvalClosureConvertedANF.hs  EvalTerm.hs  HOAS.hs  Literal.hs  Module.hs  NormalizeANF.hs  STLC.hs  ShiftRemoval.hs  Term.hs  TermLocallyNameless.hs  TermZipper.hs  Type.hs  Value.hs
src/Hopper/Parsing/: Concrete.hs  Term.hs
src/Hopper/Utils/: BigMath.hs  Closed.hs  LocallyNameless.hs  Swap.hs
src/Language/Hopper/: HBound.hs
src/Language/Lambomba/: HBound.hs
state-viewer/: package.json
state-viewer/src/: App.js
tests/HopSpec/: AnfSpec.hs  ClosureConversionSpec.hs  EvalSpec.hs  LiteralSpec.hs  STESpec.hs  ShiftRemovalSpec.hs  TermSpec.hs
writings/: anf-notes.txt  readme.md  references.md
(+36 files in other folders)
